--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <main>
       <img src="https://avatars.githubusercontent.com/u/109772792?v=4" alt="avatar-rocks">
-      <h1>Rokssane Marina</h1>
+      <h1>Wander Brasil</h1>
       <p>Social Media</p>
 
       <div>
-        <a href="https://twitter.com/rokssanemarina"> Twitter</a> -
-        <a href="https://facebook.com/rokssanemarina">Facebook</a>
+        <a href="https://twitter.com/wander_brasill"> Twitter</a> -
+        <a href="https://facebook.com/brasilwanderdacosta">Instagram</a>
       </div>
 
     </main>
